# researcher

./: README.md  envs.toml  pyproject.toml  sources.sqlite
researcher/: .env  __init__.py  ingest.py  query.py  scrape.py  sources.py  vector_db.py
